--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/react-fontawesome": "^0.1.3",
     "babel-plugin-styled-components": "^1.8.0",
     "gatsby": "^2.0.0",
+    "gatsby-plugin-catch-links": "^2.0.4",
     "gatsby-plugin-feed": "^2.0.5",
     "gatsby-plugin-google-analytics": "^2.0.5",
     "gatsby-plugin-manifest": "^2.0.2",
