--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "react-helmet": "^5.2.0",
+    "react-loading": "^2.0.3",
     "react-typography": "^0.16.13",
     "styled-components": "^3.4.10",
     "typeface-merriweather": "0.0.43",
