Contact form and service form functional in dev without pics

--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,3 @@
 STRIPE_KEY=pk_live_2yS1V5X6qD8a9vEfyz4kIAHq
 STRIPE_LAMBDA_API=https://lnzjc5hzwl.execute-api.us-east-1.amazonaws.com/prod/billing
+RECAPTCHA_KEY=6LdL-44UAAAAAHxWQ6IRh60P_9ZZwdIZIjndek0c
