--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,5 @@
 STRIPE_KEY=pk_test_JEX1JVjLG1P75jbd3I9YU3EF
 STRIPE_LAMBDA_API=https://sfjzk8cuv9.execute-api.us-east-1.amazonaws.com/dev/billing
 MS_API_SUBSCRIBE=https://gwl3q1s494.execute-api.us-east-1.amazonaws.com/dev/subscribe
+MS_API_CONTACT=https://gwl3q1s494.execute-api.us-east-1.amazonaws.com/dev/contact
+RECAPTCHA_KEY=6LdL-44UAAAAAHxWQ6IRh60P_9ZZwdIZIjndek0c
