--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-dom": "^16.5.1",
     "react-helmet": "^5.2.0",
     "react-loading": "^2.0.3",
+    "react-player": "^1.9.3",
     "react-recaptcha": "^2.3.10",
     "react-typography": "^0.16.13",
     "styled-components": "^4.1.3",
