--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-helmet": "^5.2.0",
     "react-loading": "^2.0.3",
     "react-player": "^1.9.3",
+    "react-rangeslider": "^2.2.0",
     "react-recaptcha": "^2.3.10",
     "react-typography": "^0.16.13",
     "styled-components": "^4.1.3",
