Site metadata and learn card update

--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,5 @@
 STRIPE_KEY=pk_live_2yS1V5X6qD8a9vEfyz4kIAHq
 STRIPE_LAMBDA_API=https://lnzjc5hzwl.execute-api.us-east-1.amazonaws.com/prod/billing
 RECAPTCHA_KEY=6LdL-44UAAAAAHxWQ6IRh60P_9ZZwdIZIjndek0c
+MS_API_SUBSCRIBE=https://4i0ciopygc.execute-api.us-east-1.amazonaws.com/prod/subscribe
+MS_API_CONTACT=https://4i0ciopygc.execute-api.us-east-1.amazonaws.com/prod/contact
