--- a/.env.production
+++ b/.env.production
@@ -3,3 +3,4 @@ STRIPE_LAMBDA_API=https://lnzjc5hzwl.execute-api.us-east-1.amazonaws.com/prod/bi
 RECAPTCHA_KEY=6LdL-44UAAAAAHxWQ6IRh60P_9ZZwdIZIjndek0c
 MS_API_SUBSCRIBE=https://4i0ciopygc.execute-api.us-east-1.amazonaws.com/prod/subscribe
 MS_API_CONTACT=https://4i0ciopygc.execute-api.us-east-1.amazonaws.com/prod/contact
+SITE_DOMAIN=https://www.musicsequencing.com
