--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "gatsby-plugin-mailchimp": "git+https://github.com/benjaminhoffman/gatsby-plugin-mailchimp.git#gatsby-v2",
     "gatsby-plugin-manifest": "^2.0.17",
     "gatsby-plugin-netlify": "^2.0.10",
-    "gatsby-plugin-offline": "^2.0.23",
+    "gatsby-plugin-offline": "^2.0.24",
     "gatsby-plugin-prefetch-google-fonts": "^1.4.0",
     "gatsby-plugin-react-helmet": "^3.0.6",
     "gatsby-plugin-sass": "^2.0.10",
@@ -45,8 +45,8 @@
     "react-helmet": "^5.2.0",
     "react-loading": "^2.0.3",
     "react-player": "^1.9.3",
-    "react-rangeslider": "^2.2.0",
     "react-recaptcha": "^2.3.10",
+    "react-share": "^2.4.0",
     "react-typography": "^0.16.18",
     "styled-components": "^4.1.3",
     "typeface-merriweather": "0.0.43",
