--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "axios": "^0.18.0",
     "babel-plugin-styled-components": "^1.10.0",
-    "gatsby": "^2.1.15",
+    "gatsby": "^2.4.2",
+    "gatsby-cli": "^2.5.12",
     "gatsby-plugin-catch-links": "^2.0.10",
     "gatsby-plugin-feed": "^2.0.13",
     "gatsby-plugin-google-analytics": "^2.0.13",
@@ -25,7 +26,7 @@
     "gatsby-plugin-prefetch-google-fonts": "^1.4.0",
     "gatsby-plugin-react-helmet": "^3.0.6",
     "gatsby-plugin-sass": "^2.0.10",
-    "gatsby-plugin-sharp": "^2.0.20",
+    "gatsby-plugin-sharp": "^2.0.36",
     "gatsby-plugin-sitemap": "^2.0.6",
     "gatsby-plugin-styled-components": "^3.0.5",
     "gatsby-plugin-typography": "^2.2.7",
@@ -34,11 +35,11 @@
     "gatsby-remark-prismjs": "^3.2.4",
     "gatsby-remark-responsive-iframe": "^2.0.9",
     "gatsby-remark-smartypants": "^2.0.8",
-    "gatsby-source-filesystem": "^2.0.21",
+    "gatsby-source-filesystem": "^2.0.33",
     "gatsby-transformer-remark": "^2.2.4",
     "gatsby-transformer-sharp": "^2.1.13",
     "lodash": "^4.17.11",
-    "node-sass": "^4.11.0",
+    "node-sass": "^4.12.0",
     "prismjs": "^1.15.0",
     "prop-types": "^15.7.1",
     "react": "^16.8.1",
