--- a/.env.production
+++ b/.env.production
@@ -4,3 +4,4 @@ RECAPTCHA_KEY=6LdL-44UAAAAAHxWQ6IRh60P_9ZZwdIZIjndek0c
 MS_API_SUBSCRIBE=https://4i0ciopygc.execute-api.us-east-1.amazonaws.com/prod/subscribe
 MS_API_CONTACT=https://4i0ciopygc.execute-api.us-east-1.amazonaws.com/prod/contact
 SITE_DOMAIN=https://www.musicsequencing.com
+GATSBY_DISQUS_NAME=musicsequencing
