--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/react-fontawesome": "^0.1.8",
     "axios": "^0.18.1",
     "babel-plugin-styled-components": "^1.10.6",
+    "disqus-react": "^1.0.7",
     "gatsby": "^2.19.1",
     "gatsby-cli": "^2.8.27",
     "gatsby-plugin-catch-links": "^2.1.24",
