--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,7 +1,7 @@
 # NETLIFY CMS config file 
 backend:
-  # name: test-repo
-  name: git-gateway
+  name: test-repo
+  # name: git-gateway
 
 media_folder: "static/imgs"
 public_folder: "/imgs"
@@ -15,9 +15,34 @@ collections:
       - { name: title, label: Title, widget: string }
       - { name: author, label: Author, widget: string, default: "Alex Nye"}
       - { name: date, label: Date, widget: datetime, dateFormat: "YYYY-MM-DD" }      
-      - { name: learn, label: Learn, widget: boolean, default: true}
-      - { name: category, label: Category, widget: string}
-      - { name: subcategory, label: Sub-Category, widget: list}
+      # - { name: learn, label: Learn, widget: boolean, default: true}
+      - { name: category, label: Category, widget: select, options: ["Knowledge", "Review", "Music News", "Blog"]}
+      - { name: subcategory, label: Sub-Category, widget: select, 
+          options: [
+                    {label: "Knowledge - Tutorial", value: "Tutorial"},
+                    {label: "Knowledge - Basics", value: "Basics"},
+                    {label: "Knowledge - Mixing", value: "Mixing"},
+                    {label: "Knowledge - Gear", value: "Gear"},
+                    {label: "Knowledge - Logic Pro X", value: "Logic Pro X"},
+                    {label: "Knowledge - Sound Design", value: "Sound Design"},
+                    {label: "Knowledge - Music Theory", value: "Music Theory"},
+                    {label: "Knowledge - Business", value: "Business"},
+                    {label: "Knowledge - Analysis", value: "Analysis"},
+                    {label: "Review - EQ", value: "EQ"},
+                    {label: "Review - Compressors", value: "Compressor"},
+                    {label: "Review - Synth", value: "Synth"},
+                    {label: "Review - Outboard", value: "Outboard Gear"},
+                    {label: "Review - Free", value: "Free"},
+                    {label: "Review - Educational", value: "Educational"},
+                    {label: "Review - Books", value: "Books"},
+                    {label: "News - New Gear", value: "New Gear"},
+                    {label: "News - Music News", value: "Music News"},
+                    {label: "News - Obituaries", value: "Obituaries"},
+                    {label: "News - Business", value: "Business News"},
+                    {label: "Blog - Artists Life", value: "Artist's Life"},
+                    {label: "Blog - Humble Opinion", value: "Humble Opinion"},
+                    ]
+        }
       - { name: tags, label: Tags, widget: list}
       - { name: featuredImage, label: Featured Image, widget: image}
       - { name: metaDescription, label: Meta Description, widget: string}
