Add pagination functionality and potential to use it for categories. Posts still need filtered by categories

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -28,17 +28,17 @@ collections:
                     {label: "Knowledge - Music Theory", value: "Music Theory"},
                     {label: "Knowledge - Business", value: "Business"},
                     {label: "Knowledge - Analysis", value: "Analysis"},
-                    {label: "Review - EQ", value: "EQ"},
-                    {label: "Review - Compressors", value: "Compressor"},
-                    {label: "Review - Synth", value: "Synth"},
-                    {label: "Review - Outboard", value: "Outboard Gear"},
-                    {label: "Review - Free", value: "Free"},
-                    {label: "Review - Educational", value: "Educational"},
-                    {label: "Review - Books", value: "Books"},
-                    {label: "Review - Sample Instrument", value: "Sample Instrument"},
-                    {label: "Review - Samples", value: "Samples"},
-                    {label: "Review - Presets", value: "Presets"},
-                    {label: "Review - Amp Simulator", value: "Amp Simulator"},
+                    {label: "Reviews - EQ", value: "EQ"},
+                    {label: "Reviews - Compressors", value: "Compressor"},
+                    {label: "Reviews - Synth", value: "Synth"},
+                    {label: "Reviews - Outboard", value: "Outboard Gear"},
+                    {label: "Reviews - Free", value: "Free"},
+                    {label: "Reviews - Educational", value: "Educational"},
+                    {label: "Reviews - Books", value: "Books"},
+                    {label: "Reviews - Sample Instrument", value: "Sample Instrument"},
+                    {label: "Reviews - Samples", value: "Samples"},
+                    {label: "Reviews - Presets", value: "Presets"},
+                    {label: "Reviews - Amp Simulator", value: "Amp Simulator"},
                     {label: "News - New Gear", value: "New Gear"},
                     {label: "News - Music News", value: "Music News"},
                     {label: "News - Obituaries", value: "Obituaries"},
