--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "babel-plugin-styled-components": "^1.10.6",
     "disqus-react": "^1.0.7",
     "gatsby": "^2.24.53",
+    "gatsby-background-image": "^1.1.2",
     "gatsby-cli": "^2.12.91",
+    "gatsby-image": "^2.4.16",
     "gatsby-plugin-catch-links": "^2.1.24",
     "gatsby-plugin-feed": "^2.3.26",
     "gatsby-plugin-google-analytics": "^2.1.33",
@@ -40,6 +42,7 @@
     "gatsby-source-filesystem": "^2.1.46",
     "gatsby-transformer-remark": "^2.6.48",
     "gatsby-transformer-sharp": "^2.3.13",
+    "intersection-observer": "^0.11.0",
     "lodash": "^4.17.20",
     "netlify-cms-app": "^2.12.4",
     "node-sass": "^4.14.1",
